--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "cloudinary": "^2.7.0",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1"
   }
 }
+
 
